# argo-data-interpolation

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  REUSE.toml  cycle_data.csv  jana-study-replication.ipynb  playground.ipynb  pyproject.toml  vertical-interp.ipynb
.github/workflows/: tests.yml
.governance/: README.md  policy-overrides-spec.yaml  task-map.yaml
.governance/overrides/: policy-overrides-spec.yaml
.governance/policies/: ai-acceptance.yaml  code-review.yaml  epistemic-discipline.yaml  execution.yaml  gitflow.yaml  notebooks.yaml  research-citations.yaml  research-framing.yaml  research-review.yaml  research-structure.yaml  risk-validation.yaml  safety.yaml  universal.yaml
LICENSES/: CC-BY-4.0.txt
research/: .jupytext.toml  LICENSE  README.md  research-methodology.md
research/argo-cycle-representation/: README.md  literature-review.md  operationalization-notes.md  research-notes.md  source-acquisition-tracker.md
research/argo-cycle-representation/notebooks/: 01-cycle-representation-baseline.ipynb  01-cycle-representation-baseline.py  02-cycle-representation-validation.ipynb  02-cycle-representation-validation.py  03-cycle-representation-comparisons.ipynb  03-cycle-representation-comparisons.py  README.md  cycle-representation-baseline.ipynb  cycle-representation-baseline.py  cycle-representation-validation.ipynb  cycle-representation-validation.py
research/argo-cycle-representation/notes/: README.md  adaptive-spline-analogues.md  curvature-adaptive-spline-negative-result.md  experiment-design-notes.md  framing-notes.md  method-comparison-notes.md  operationalization-notes.md  pipeline-integration-notes.md  source-acquisition-tracker.md  (+1 more)
research/argo-mid-depth-currents/: README.md  literature-review.md  source-acquisition-tracker.md
research/spatio-temporal/: LIT-REVIEW-SPATIOTEMPORAL.md  NOTES-SPATIOTEMPORAL.md  README.md  literature-review.md  research-notes.md  source-acquisition-tracker.md
research/underwater-acoustics/: README.md  literature-review.md  source-acquisition-tracker.md
research/vertical/: LIT-REVIEW-VERTICAL.md  NOTES-VERTICAL.md
src/argo_interp/: __init__.py
tests/: test_adapters.py  test_calc_rmse.py  test_cycle_batch.py  test_cycle_collection.py  test_cycle_data.py  test_cycle_model.py  test_get_data.py  test_interleaved_kfolds.py  test_local_weighted_field.py  test_model_and_error.py  test_model_data.py  test_model_meta.py  test_sound_speed.py  test_validation_and_data.py
(+89 files in other folders)
