[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argo-data-interpolation"
version = "0.1.0"
description = "Interpolation tools for Argo float profile data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "argopy>=1.4.0",
    "cartopy>=0.25.0",
    "gsw>=3.6.21",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seawater>=3.3.5",
    "xarray>=2025.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "pympler>=1.1",
    "python-dotenv>=1.2.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "scipy-stubs>=1.17.1.3",
    "nbdime>=4.0.4",
    "jupytext>=1.19.1",
    "tqdm>=4.67.3",
]

research = [
    "argopy>=1.4.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["research"]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["argo_interp*"]
